nearly done with barely passable styling

--- a/styles/Battle.css
+++ b/styles/Battle.css
@@ -1,7 +1,21 @@
 /*Battle Stuff*/
 
 .battle-screen {
-  background-image: url('http://orig07.deviantart.net/dd1d/f/2013/340/d/1/desert_2_xy_battle_background_by_worldslayer608-d6x05bc.png');
+  -ms-align-items: center;
+  align-items: center;
+  background-image: url('http://img11.deviantart.net/56f7/i/2014/173/7/9/kanto_safari_zone___dusk_by_falke2009-d5f8xsc.png');
+  background-size: cover;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   height: 100vh;
   width: 100vw;
+}
+
+.wild-pokemon img {
+  height: 200px;
+  width: 200px;
 }
