--- a/styles/Form.css
+++ b/styles/Form.css
@@ -9,6 +9,8 @@
 a {
   color: aliceblue;
   text-decoration: none;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 a:visited {
@@ -16,11 +18,16 @@ a:visited {
 }
 
 button {
-  background-color: rgb(70, 70, 70)
+  background-color: rgb(70, 70, 70);
+  width: 90px;
+}
+
+.button {
+  width: 90px;
 }
 
 input {
-  background-color: rgb(70, 70, 70)
+  background-color: rgb(70, 70, 70);
 }
 
 
